objects/Email_Sync_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Active Paid</fullName>
                </value>
                <value>
                    <fullName>Active Grace</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Expired Marketing</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Sync Queues</relationshipLabel>
        <relationshipName>Email_Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Email_Preferences__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Email Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_ID__c</fullName>
        <label>Dispatch ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Name__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Trial_End_Date__c</fullName>
        <label>Free Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Expiry_Date__c</fullName>
        <label>Gift Code Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hard_Offer_Date__c</fullName>
        <label>Hard Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Double_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify user is double opt-in for marketing emails.</description>
        <label>Is Double Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <label>Notification Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <label>Notification Language Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause_From__c</fullName>
        <label>Pause From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pause_Until__c</fullName>
        <label>Pause Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Type__c</fullName>
        <label>Payment Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Email__c</fullName>
        <label>Person Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Details__c</fullName>
        <label>Plan Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebill_Date__c</fullName>
        <label>Rebill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Retried</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_Error_Msg__c</fullName>
        <label>Sync Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_Setting_Type__c</fullName>
        <label>Term Setting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Email__c</fullName>
        <label>Type of Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Import</fullName>
                </value>
                <value>
                    <fullName>Triggered Dispatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsubscribe_Language__c</fullName>
        <label>Unsubscribe Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Email Sync Queue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESQ-{0000}</displayFormat>
        <label>Email Sync Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Sync Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>